tests/baselines/reference/errorForUsingPropertyOfTypeAsType01.errors.txt
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(6,12): error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(14,12): error TS2503: Cannot find namespace 'Foo'.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(22,12): error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(29,12): error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts(36,12): error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.


==== tests/cases/compiler/errorForUsingPropertyOfTypeAsType01.ts (5 errors) ====
    namespace Test1 {
        export interface Foo {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
    }
    
    namespace Test2 {
        export class Foo {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2503: Cannot find namespace 'Foo'.
    }
    
    namespace Test3 {
        export type Foo = {
            bar: string;
        }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
    }
    
    namespace Test4 {
        export type Foo = { bar: number }
                        | { bar: string }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
    }
    
    namespace Test5 {
        export type Foo = { bar: number }
                        | { wat: string }
    
        var x: Foo.bar = "";
               ~~~
!!! error TS2702: 'Foo' only refers to a type, but is being used as a namespace here.
    }